2024-07-31 Franz Holzinger  <franz@ttproducts.de>
	* TYPO3 13
	* INSERT and SQL mode: lastInsertId must not raise an exception if it is 0

2024-02-16 Franz Holzinger  <franz@ttproducts.de>
    * use the global request object $GLOBALS['TYPO3_REQUEST']

2024-02-13 Franz Holzinger  <franz@ttproducts.de>
    * move initialization into the middleware

2024-01-31 Franz Holzinger  <franz@ttproducts.de>
    * Show SQL queries after all throwable exceptions.

2024-01-04 Franz Holzinger  <franz@ttproducts.de>
  	* fix function declaration compatibility between DoctrineConnection and \TYPO3\CMS\Core\Database\Connection

2024-01-03 Franz Holzinger  <franz@ttproducts.de>
	* use rector to improve the PHP code

2023-10-23 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: remove endless loop from DebugApi::myDebug. No call of any SQL function is allowed to be called from here.

2023-09-23 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: show a Doctrine exception as ERROR in the debug output

2023-09-16 Franz Holzinger  <franz@ttproducts.de>
    * new feature: Add support for ALTER TABLE

2023-06-30 Franz Holzinger  <franz@ttproducts.de>
    * compatibility: errorCode() is deprecated. Use getCode() or getSQLState() on Exception.
    * compatibility: Method errorInfo has been removed in TYPO3 12.
    * use base class Doctrine\DBAL\Driver instead of Doctrine\DBAL\Driver\Mysqli\Driver to support all drivers.

2022-12-01 Franz Holzinger  <franz@ttproducts.de>
    * compatibility: Migrate extension icon to Resources/Public/Icons/Extension.gif

2022-08-03 Franz Holzinger <franz@ttproducts.de>
    * bugfix: num_rows only works with Doctrine class comparison for instance of result set with leading backslash

2022-02-24 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The minimum size of a SQL part must be 2 characters.

2022-02-13 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Doctrine API

2022-02-01 Franz Holzinger <franz@ttproducts.de>