@@ -1,3 +1,6 @@
+2024-12-18 Franz Holzinger  <franz@ttproducts.de>
+    * remove method executeUpdate, because it has been renamed into executeStatement
+
 2024-07-31 Franz Holzinger  <franz@ttproducts.de>
 	* TYPO3 13
 	* INSERT and SQL mode: lastInsertId must not raise an exception if it is 0
